[gd_scene load_steps=7 format=3 uid="uid://dpmw1n0onhdkf"]

[ext_resource type="Texture2D" uid="uid://c8nh38nw53ual" path="res://demo.png" id="1_j84c0"]
[ext_resource type="Script" path="res://main.gd" id="1_wfqsr"]
[ext_resource type="Texture2D" uid="uid://cxh1i2f5w3chh" path="res://Hamburger_icon.svg" id="2_m6ch3"]
[ext_resource type="Script" path="res://CameraDisplay.gd" id="3_te02d"]
[ext_resource type="PackedScene" uid="uid://mcfhr3opdp2j" path="res://FadeLabel.tscn" id="5_3btmq"]
[ext_resource type="PackedScene" uid="uid://dpyivff23vrii" path="res://settings_panel.tscn" id="6_ooayv"]

[node name="ControlRoot" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wfqsr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SidePanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SidePanel"]
layout_mode = 2

[node name="Hamburger" type="TextureButton" parent="HBoxContainer/SidePanel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("2_m6ch3")
stretch_mode = 3

[node name="Home" type="Button" parent="HBoxContainer/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Home"

[node name="Settings" type="Button" parent="HBoxContainer/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Settings"

[node name="Connect" type="Button" parent="HBoxContainer/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
focus_mode = 0
text = "Connect"

[node name="Disconnect" type="Button" parent="HBoxContainer/SidePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
focus_mode = 0
disabled = true
text = "Disconnect"

[node name="Empty" type="Control" parent="HBoxContainer/SidePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HomePanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HomePanel"]
layout_mode = 2

[node name="IP" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Not connected"
horizontal_alignment = 1

[node name="Camera" type="TextureRect" parent="HBoxContainer/HomePanel/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("1_j84c0")
expand_mode = 5
stretch_mode = 5
script = ExtResource("3_te02d")

[node name="Temperature" type="HBoxContainer" parent="HBoxContainer/HomePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer/Temperature"]
layout_mode = 2
size_flags_horizontal = 3
text = "Temperature"
horizontal_alignment = 2

[node name="Value" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer/Temperature"]
layout_mode = 2
size_flags_horizontal = 3
text = "00Â°"

[node name="Ph" type="HBoxContainer" parent="HBoxContainer/HomePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer/Ph"]
layout_mode = 2
size_flags_horizontal = 3
text = "pH"
horizontal_alignment = 2

[node name="Value" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer/Ph"]
layout_mode = 2
size_flags_horizontal = 3
text = "14"

[node name="LastFeed" type="HBoxContainer" parent="HBoxContainer/HomePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer/LastFeed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last feed"
horizontal_alignment = 2

[node name="Value" type="Label" parent="HBoxContainer/HomePanel/VBoxContainer/LastFeed"]
layout_mode = 2
size_flags_horizontal = 3
text = "12:12, January 1, 2012"

[node name="FeedButton" type="Button" parent="HBoxContainer/HomePanel/VBoxContainer"]
layout_mode = 2
text = "Feed Now"

[node name="FadeLabel" parent="HBoxContainer/HomePanel/VBoxContainer" instance=ExtResource("5_3btmq")]
layout_mode = 2

[node name="SettingsPanel" parent="HBoxContainer" instance=ExtResource("6_ooayv")]
layout_mode = 2

[node name="Timers" type="Node" parent="."]

[node name="StatTimer" type="Timer" parent="Timers"]

[connection signal="connected" from="." to="." method="_on_connect_success"]
[connection signal="disconnected" from="." to="." method="SetRemote" binds= [false]]
[connection signal="toggled" from="HBoxContainer/SidePanel/VBoxContainer/Hamburger" to="." method="_on_hamburger_toggled"]
[connection signal="pressed" from="HBoxContainer/SidePanel/VBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="HBoxContainer/SidePanel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/SidePanel/VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="HBoxContainer/SidePanel/VBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="HBoxContainer/HomePanel/VBoxContainer/FeedButton" to="." method="_on_feed_button_pressed"]
[connection signal="language_updated" from="HBoxContainer/SettingsPanel" to="." method="ChangeLocale"]
[connection signal="timeout" from="Timers/StatTimer" to="." method="_on_stat_timer_timeout"]
